# tritonserver_backend-glog-fork

./: CMakeLists.txt  amd_hipify.py  triton_rocm_hipify.cmake
.glog/: glog-scan.sarif
include/triton/backend/: backend_common.h  backend_input_collector.h  backend_model_instance.h  backend_output_responder.h  device_memory_tracker.h
src/: backend_common.cc  backend_input_collector.cc  backend_memory.cc  backend_model_instance.cc  backend_output_responder.cc  device_memory_tracker.cc  kernel.cc  kernel.h
